--- a/src/asiotestdemo/asiotestdemo/CMakeLists.txt
+++ b/src/asiotestdemo/asiotestdemo/CMakeLists.txt
@@ -10,12 +10,17 @@ SET(CMAKE_VERBOSE_MAKEFILE ON)
 
 include_directories(
 	${CMAKE_CURRENT_SOURCE_DIR}
+	${CMAKE_SOURCE_DIR}/vendor/libressl-3.1.1/include
 	${CMAKE_SOURCE_DIR}/vendor/asio-1.18.0/include
 )
-
+link_directories(
+	${CMAKE_BINARY_DIR}/vendor/libressl-3.1.1/ssl 
+	${CMAKE_BINARY_DIR}/vendor/libressl-3.1.1/tls 
+	${CMAKE_BINARY_DIR}/vendor/libressl-3.1.1/crypto
+)
 # Add source to this project's executable.
 FILE(GLOB SRCS "*.cpp" "*.c")
-FILE(GLOB ASIO_SRCS "${CMAKE_SOURCE_DIR}/vendor/asio-1.18.0/src/asio.cpp")
+FILE(GLOB ASIO_SRCS "${CMAKE_SOURCE_DIR}/vendor/asio-1.18.0/src/*.cpp")
 add_executable (asiotestdemo ${SRCS} ${ASIO_SRCS})
 IF(MSVC)
 target_compile_options(asiotestdemo 
@@ -39,4 +44,9 @@ PRIVATE "ASIO_STANDALONE"
 PRIVATE "ASIO_SEPARATE_COMPILATION"
 )
 ENDIF(MSVC)
+target_link_libraries(asiotestdemo	
+        PRIVATE re_tls_static
+        PRIVATE re_ssl_static
+        PRIVATE re_crypto_static
+)
 # TODO: Add tests and install targets if needed.
