提交CMakeFile工程文件

--- a/src/asiotestdemo/asiotestdemo/CMakeLists.txt
+++ b/src/asiotestdemo/asiotestdemo/CMakeLists.txt
@@ -6,7 +6,13 @@ cmake_minimum_required (VERSION 3.8)
 set(project_name asiotestdemo)
 project(${project_name})
 
+include(CheckIncludeFileCXX)
+CHECK_INCLUDE_FILE_CXX(coroutine HAVE_COROUTINE_H)
+if(HAVE_COROUTINE_H)
 SET(EXPERIMENTAL_SUPPORT OFF)
+else(HAVE_COROUTINE_H)
+SET(EXPERIMENTAL_SUPPORT ON)
+endif(HAVE_COROUTINE_H)
 
 include_directories(
 	${CMAKE_CURRENT_SOURCE_DIR}
